--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         // 1. https://developers.kakao.com/ 접속
         // 2. 애플리케이션 생성 후 REST API 키 복사
         // 3. config.js 파일에서 YOUR_KAKAO_API_KEY를 실제 키로 교체
-        const KAKAO_API_KEY = window.CONFIG ? window.CONFIG.KAKAO_API_KEY : 'YOUR_KAKAO_API_KEY';
+        const KAKAO_API_KEY = window.CONFIG ? window.CONFIG.KAKAO_API_KEY : '28d0a1b4e9c46ef1292049a6555e8207';
         const KAKAO_API_URL = window.CONFIG ? window.CONFIG.KAKAO_API_URL : 'https://dapi.kakao.com/v2/local/search/keyword.json';
 
         // 네이버 API 설정
